move conf file and turn off autorestart

--- a/image_post.conf
+++ b/image_post.conf
@@ -2,5 +2,5 @@
 directory=/opt/src/image_post/
 command=python image_post.py
 autostart=true
-autorestart=true
+autorestart=false
 redirect_stderr=true
