python3 in config

--- a/image_post.conf
+++ b/image_post.conf
@@ -1,6 +1,6 @@
 [program:image_post]
 directory=/opt/src/image_post/
-command=python image_post.py
+command=python3 image_post.py
 autostart=true
 autorestart=false
 redirect_stderr=true
